tests/bad_programs/semantic_errors/funcall_incorrect_type1.notc
void fun(int a, int b) {
}

int main() {
    fun(1, "string");
    return 0;
}
